--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -36,4 +36,10 @@
         position: absolute;
         bottom: 0;
     }
+    .home-background{
+        overflow: hidden;
+    }
+    .home{
+        overflow: hidden;
+    }
 }
